# UserManagement

./: README.md
CSharp/: Build.fsx  UserManagement.sln  build.sh
CSharp/UserManagement/: ApiController.cs  BadRequestErrorMessageResult.cs  ConnectionsController.cs  ErrorResult.cs  ErrorTwoUsersLookupResult.cs  ErrorUserLookupResult.cs  FirstInvalidIdTwoUsersLookupResult.cs  FirstNotFoundTwoUsersLookupResult.cs  FoundTwoUsersLookupResult.cs  FoundUserLookupResult.cs  IHttpActionResult.cs  IResult.cs  IResultVisitor.cs  ITwoUsersLookupResult.cs  ITwoUsersLookupResultParameters.cs  ITwoUsersLookupResultVisitor.cs  IUserCache.cs  IUserLookupError.cs  IUserLookupErrorVisitor.cs  IUserLookupResult.cs  IUserLookupResultParameters.cs  IUserLookupResultVisitor.cs  IUserReader.cs  IUserRepository.cs  InvalidIdUserLookupError.cs  InvalidIdUserLookupResult.cs  NotFoundUserLookupError.cs  NotFoundUserLookupResult.cs  OkNegotiatedContentResult.cs  Result.cs  SecondInvalidIdTwoUsersLookupResult.cs  SecondNotFoundTwoUsersLookupResult.cs  SuccessResult.cs  SuccessTwoUsersLookupResult.cs  SuccessUserLookupResult.cs  TwoUsersLookupResult.cs  TwoUsersLookupResultParameters.cs  User.cs  UserLookupError.cs  UserLookupResult.cs  (+3 more)
CSharp/UserManagement.UnitTests/: ConnectionsControllerTests.cs  FakeDB.cs  UserManagement.UnitTests.csproj  UserManagementTestConventionsAttribute.cs  app.config  packages.config
FSharp/: .gitignore  UserManagement.sln
FSharp/UserManagement/: AssemblyInfo.fs  (+2 more)
Haskell/: .gitignore  UserManagement.cabal
Haskell/src/: UserManagement.hs
Haskell/test/: Spec.hs
(+7 files in other folders)
