name:                UserManagement
version:             0.1.0.0
-- synopsis:
-- description:
author:              Mark Seemann
copyright:           2018 Mark Seemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UserManagement
  build-depends:       base >= 4.7 && < 5
                     , transformers
  default-language:    Haskell2010

test-suite UserManagement-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , transformers
                     , UserManagement
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/UserManagement
